# sbus-android

./: .hgignore  ProjectHome.md  sbus-android
AIRSSensor/: AndroidManifest.xml
AIRSSensor/assets/: AirsSensor.cpt  AirsSensorDynamic.cpt  CreateEpt.cpt  SomeSensor.cpt
Airs/: .project
SBUS/: .project  AndroidManifest.xml
SBUS-Android/: Makefile.am  Makefile.orig  configure.ac  sbus-ndk.sh
SBUS-Android/compat/: Makefile.am  compat_test.c  ifaddrs.c  ifaddrs.h
SBUS-Android/diss/: Makefile  diss.tex  propbody.tex  proposal.tex  rdc_results.m  refs.bib  schema.coach.french.tex  schema.coach.tex  schema.taxi.tex  schema.train.tex  schemas.evaluation.tex  schemas.tex
SBUS-Android/diss/evaluation/: rdc-results-s0e0.txt  rdc-results-s0e1.txt  rdc-results-s1e0.txt  rdc-results-s1e1.txt  rdc_search_optimisations.m
SBUS-Android/diss/evaluation/construct-lookup/: construct-lookup-BigConsumer-BigSensor.txt  construct-lookup-BigConsumer-GiantSensor.txt  construct-lookup-BigConsumer-SmallSensor.txt  construct-lookup-BigConsumer-TinySensor.txt  construct-lookup-GiantConsumer-BigSensor.txt  construct-lookup-GiantConsumer-GiantSensor.txt  construct-lookup-GiantConsumer-SmallSensor.txt  construct-lookup-GiantConsumer-TinySensor.txt  construct-lookup-SmallConsumer-BigSensor.txt  construct-lookup-SmallConsumer-GiantSensor.txt  construct-lookup-SmallConsumer-SmallSensor.txt  construct-lookup-SmallConsumer-TinySensor.txt  construct-lookup-TinyConsumer-BigSensor.txt  construct-lookup-TinyConsumer-GiantSensor.txt  construct-lookup-TinyConsumer-SmallSensor.txt  construct-lookup-TinyConsumer-TinySensor.txt  construct_lookup.m
SBUS-Android/diss/evaluation/jni/: jni-java.txt  jni.m  jni.txt
SBUS-Android/diss/evaluation/map/: map.m  spoke-map-laptop.txt  spoke-map-phone.txt  spoke-map-remote.txt  spoke-map.txt
SBUS-Android/diss/evaluation/policy/: airs.txt  policy.m
SBUS-Android/diss/evaluation/rdc-search-optimisations/: rdc-results-s0e0.txt  rdc-results-s0e1.txt  rdc-results-s1e0.txt  rdc-results-s1e1.txt  rdc_search_optimisations.m
SBUS-Android/diss/evaluation/repack-message/: repack-message-BigConsumer-BigSensor.txt  repack-message-BigConsumer-GiantSensor.txt  repack-message-BigConsumer-SmallSensor.txt  repack-message-BigConsumer-TinySensor.txt  repack-message-GiantConsumer-BigSensor.txt  repack-message-GiantConsumer-GiantSensor.txt  repack-message-GiantConsumer-SmallSensor.txt  repack-message-GiantConsumer-TinySensor.txt  repack-message-SmallConsumer-BigSensor.txt  repack-message-SmallConsumer-GiantSensor.txt  repack-message-SmallConsumer-SmallSensor.txt  repack-message-TinyConsumer-BigSensor.txt  repack-message-TinyConsumer-GiantSensor.txt  repack-message-TinyConsumer-SmallSensor.txt  repack-message-TinyConsumer-TinySensor.txt  repack_message.m
SBUS-Android/diss/figs/: construct_lookup.eps  jni.eps  map.eps  policy.eps  rdc_search_optimisations.eps  repack_message.eps
SBUS-Android/docs/: Changelog  Makefile  Makefile.am  Makefile.in  Makefile.orig  api.tex  c.tex  datarepr.tex  datasample.tex  dynamics.tex  extensions.tex  hack.tex  java.tex  macros.tex  metadata.tex  overview.tex  prebuilt_cpts.tex  protocol.tex  python.tex  userguide.tex
SBUS-Android/docs/diagrams/: arrows.eps  broker.eps  controlseq.eps  dataseq.eps  decentralised.eps  demux.eps  insert1.eps  insert2.eps  latency.eps  migration.eps  parts.eps  reduce.eps  wrapper.eps
SBUS-Android/gl/: Makefile  Makefile.am  Makefile.in  getdelim.c  getline.c
SBUS-Android/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
SBUS-Android/idl/: Makefile  Makefile.am  Makefile.in  Makefile.orig  builtin.cpt  carpark.cpt  cpt_metadata.idl  cpt_status.idl  demo.cpt  democlient.cpt  map_constraints.idl  rdc.cpt  rdcacl.cpt  slowcar.cpt  speek.cpt  spersist.cpt  trafficgen.cpt  universalsink.cpt
SBUS-Android/java/: Builder.java  Component.java  Datatype.java  Dimension.java  Hash.java  Log.java  LowLevel.java  Makefile  Makefile.am  Makefile.in  Makefile.orig  Messages.java  Net.java  XML.java
SBUS-Android/java/tools/: DemoCpt.java  Makefile  Makefile.am  Makefile.in  Persist.java  RDC.java
SBUS-Android/tools/: Makefile.am  Makefile.orig  broker.cpp  democlient.cpp  democpt.cpp  multitraffic.cpp  persist.cpp  rdc.cpp  rdc.h  rdcacl.cpp  rdcacl.h  sbus.cpp  slowcar.cpp  speek.cpp  spersist.cpp  spoke.cpp  trafficgen.cpp  universalsink.cpp  universalsource.cpp
SBUS-Android/utils/: Makefile.am  Makefile.orig  analysecpt.cpp  archive.cpp  checkimport.cpp  checkmetadata.cpp  checkschema.cpp  checkvalidate.cpp  extract.cpp  litmuscode.cpp  misctest.cpp  nettest.cpp
SBUS-Android/utils/.deps/: analysecpt.Po  archive.Po  checkimport.Po  checkmetadata.Po  checkschema.Po  checkvalidate.Po  extract.Po  litmuscode.Po
SBUS-Android/wrapper/: Makefile.am  Makefile.orig  express.cpp  express.h  litmus.cpp  litmus.h  marshall.cpp  marshall.h  peernet.cpp  peernet.h  permission.cpp  permission.h  unmarshall.cpp  unmarshall.h  validate.cpp  validate.h  wrap.h  wrapper.cpp  wrapper.h
SBUS/assets/: connect.cpt  map.cpt  phonerdc.cpt  pmc.cpt  sbuswrapper
SBUS/jni/: Android.mk  multiplex.cpp  sbusandroid.cpp  sbusandroid.h  scomponent.cpp  sendpoint.cpp  smessage.cpp  snode.cpp  somesensor.cpp
SomeConsumer/: AndroidManifest.xml
SomeConsumer/assets/: SomeConsumer.cpt
SomeSensor/: AndroidManifest.xml  readme.txt
(+81 files in other folders)
