AM_MAKEFLAGS = datadir=$(datadir)/litmus

data_DATA = broker.cpt builtin.cpt carpark.cpt demo.cpt democlient.cpt rdc.cpt rdcacl.cpt sbus.cpt slowcar.cpt speek.cpt spersist.cpt spoke.cpt trafficgen.cpt universalsink.cpt universalsource.cpt cpt_metadata.idl cpt_status.idl map_constraints.idl rdc_default.priv
